<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/plomo_claro"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:id="@+id/ly_menu_principal"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/magenta"
        android:padding="10dp"
        android:orientation="horizontal" >



        <ImageView
            android:id="@+id/btn_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/abc_ic_ab_back_mtrl_am_alpha" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/magenta"
            android:orientation="vertical" >


            <ImageView
                android:id="@+id/img_titulo"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/logo_menu" />

        </LinearLayout>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/plomo_mas_oscuro"
        android:padding="10dp"
        android:orientation="horizontal" >




        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/img"
            android:layout_weight="1"
            android:background="@drawable/boton_custom"
            android:textColor="@color/blanco"
            android:id="@+id/btn_img"
            android:layout_gravity="center_vertical" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_custom"
            android:textColor="@color/blanco"
            android:text="@string/audio"
            android:id="@+id/btn_audio"
            android:layout_gravity="center_vertical"  />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_custom"
            android:textColor="@color/blanco"
            android:text="@string/video"
            android:id="@+id/btn_video"
            android:layout_gravity="center_vertical"  />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_custom"
            android:textColor="@color/blanco"
            android:text="@string/galeria"
            android:id="@+id/btn_galeria"
            android:layout_gravity="center_vertical"  />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/fondo1"
        android:layout_weight="1"
        android:orientation="vertical" >





        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:fillViewport="false"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            <TextView
                android:id="@+id/lbl_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco"
                android:text="@string/titulo"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/txt_titulo"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/blanco"
                android:inputType="textEmailAddress"
                android:textColor="@color/plomo"
                android:layout_margin="10dp"
                >
            </EditText>


            <TextView
                android:id="@+id/lbl_seccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seccion"
                android:textColor="@color/blanco"
                android:textSize="20sp"
                />



            <EditText
                android:id="@+id/txt_seccion"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/plomo"
                android:background="@color/blanco"
                android:layout_margin="10dp"
                android:padding="10dp"

                >
            </EditText>




            <TextView
                android:id="@+id/lbl_descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textSize="20sp"
                android:textColor="@color/blanco"
                />



            <EditText
                android:id="@+id/txt_descripcion"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_height="wrap_content"
                android:textColor="@color/plomo"
                android:background="@color/blanco"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:lines="5"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                >
            </EditText>

</LinearLayout>

        </ScrollView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/celeste_lafar"
        android:orientation="horizontal" >




        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hablar"
            android:background="@color/magenta"
            android:textColor="@color/blanco"
            android:layout_weight="1"
            android:id="@+id/btn_hablar"
            android:layout_gravity="center_vertical" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:layout_weight="1"
            android:background="@color/azul_facebook"
            android:id="@+id/btn_guardar"
            android:textColor="@color/blanco"
            android:layout_gravity="center_vertical" />


    </LinearLayout>

</LinearLayout>


